[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "FastAPI URL Shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "redis[hiredis]>=6.2.0",
    "ruff>=0.12.5",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
#    "types-redis>=4.6.0.20240325",
#    "pydantic-mypy>=0.1.0",
]

# mypy settings

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']
#python_version = "3.13"
#disallow_untyped_defs = true
#warn_return_any = true
#warn_unused_configs = true
#warn_redundant_casts = true
#warn_unreachable = true
#disable_error_code = "ignore-without-code"  # Запрещает голые # type: ignore

# ruff settings

[tool.ruff]
required-version = ">=0.11.5"
src = [
    "url-shortener",
]




# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations (ANN)
    "FAST", # FastAPI (FAST)
    "I", # isort (I)
    "F", # Pyflakes (F)
    "COM", # flake8-commas (COM)
    "Q", # flake8-quotes (Q)
    # "ASYNC", # flake8-async (ASYNC)
    "S", # flake8-bandit (S)
    "BLE", # flake8-blind-except (BLE)
    "FBT",  # flake8-boolean-trap (FBT)
    "B",  # flake8-bugbear (B)
    "C4", # flake8-comprehensions (C4)

]
ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []



