[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "FastAPI URL Shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "redis[hiredis]>=6.2.0",
    "ruff>=0.12.5",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
#    "types-redis>=4.6.0.20240325",
#    "pydantic-mypy>=0.1.0",
]

# mypy settings

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']
#python_version = "3.13"
#disallow_untyped_defs = true
#warn_return_any = true
#warn_unused_configs = true
#warn_redundant_casts = true
#warn_unreachable = true
#disable_error_code = "ignore-without-code"  # Запрещает голые # type: ignore

# ruff settings

[tool.ruff]
required-version = ">=0.11.5"
src = [
    "url-shortener",
]




# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations (ANN)
    "FAST", # FastAPI (FAST)
    "I", # isort (I)
    "F", # Pyflakes (F)
    "COM", # flake8-commas (COM)
    "Q", # flake8-quotes (Q)
    # "ASYNC", # flake8-async (ASYNC)
    "S", # flake8-bandit (S)
    "BLE", # flake8-blind-except (BLE)
    "FBT",  # flake8-boolean-trap (FBT)
    "B",  # flake8-bugbear (B)
    "C4", # flake8-comprehensions (C4),
    "DTZ", # flake8-datetimez (DTZ)
    "T10", # flake8-debugger (T10)
    "EM", # flake8-errmsg (EM)
    "ISC", # flake8-implicit-str-concat (ISC)
    "ICN", # flake8-import-conventions (ICN)
    "LOG", # flake8-logging (LOG)
    "G", # flake8-logging-format (G)
    "INP", # flake8-no-pep420 (INP)
    "PIE", # flake8-pie (PIE)
    "T20", # flake8-print (T20)
    "PYI", # flake8-pyi (PYI)
    # "PT", # flake8-pytest-style (PT)
    "Q", # flake8-quotes (Q)
    "RSE", # flake8-raise (RSE)
    "RET", # flake8-return (RET)
    "SLF", # flake8-self (SLF)
    "SIM", # flake8-simplify (SIM)
    "SLOT", # flake8-slots (SLOT)
    "TC", # flake8-type-checking (TC)
    "ARG", # flake8-unused-arguments (ARG)



]
ignore = [
    "S101", # S101	assert	Use of assert detected
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "TC006", # runtime-cast-value
]

[tool.ruff.lint.extend-per-file-ignores]
"stuff.py" = [
    "T20", # flake8-print (T20)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []



